--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,7 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
+        maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
@@ -22,9 +19,9 @@ compileJava {
 }
 
 minecraft {
-    version = "1.9.4-12.17.0.2051"
+    version = "1.10.2-12.18.3.2511"
     runDir = "run"
-    mappings = "snapshot_20160518"
+    mappings = "snapshot_20161111"
 }
 
 dependencies {}
