--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -22,21 +22,26 @@ compileJava {
 }
 
 minecraft {
-    version = "1.9.4-12.17.0.2051"
+    version = "1.12.2-14.23.5.2815"
     runDir = "run"
-    mappings = "snapshot_20160518"
+    mappings = "snapshot_20171003"
 }
 
 dependencies {}
 
-processResources
-{
+jar {
+    manifest {
+        attributes 'FMLAT': 'gvc_at.cfg'
+    }
+}
+
+processResources {
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
 
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        expand 'version': project.version, 'mcversion': project.minecraft.version
     }
 
     from(sourceSets.main.resources.srcDirs) {
